Add extra variables to config

--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,7 @@ MaxDurationInMinutes=180
 DeleteAfterDays=14
 ; How many logs have to be gathered in memory per match before being pushed to the database
 NumLogsRequiredForInsert=1000
+; How many RCON connections are opened per session. More connections allow each iteration to be processed faster.
+NumRCONWorkers=4
+; The number of seconds between server updates. The smaller this number, the preciser your logs will be.
+SecondsBetweenIterations=5
