Add admin support for overriding update channels

--- a/config.ini
+++ b/config.ini
@@ -17,3 +17,7 @@ NumLogsRequiredForInsert=1000
 NumRCONWorkers=4
 ; The number of seconds between server updates. The smaller this number, the preciser your logs will be.
 SecondsBetweenIterations=5
+
+[Updates]
+; A comma-separated list of text channel IDs to send update notifications to, instead of to the guild's default channels.
+UpdateChannelOverrides=
