change to real HSS api

--- a/config.ini
+++ b/config.ini
@@ -36,4 +36,4 @@ UpdateChannelOverrides=
 
 [HSS]
 ; The base URL of the Hell Let Loose Skill System API to use when users want to submit logs as a match to HSS.
-ApiBaseUrl=http://localhost:5000/api
+ApiBaseUrl=https://api.helo-system.de/v2
