--- a/config.ini
+++ b/config.ini
@@ -44,3 +44,7 @@ UpdateChannelOverrides=
 [HSS]
 ; The base URL of the Hell Let Loose Skill System API to use when users want to submit logs as a match to HSS.
 ApiBaseUrl=https://api.helo-system.de/v2
+
+[OneManArty]
+; Whether artillery players may use commander abilities. Set to 1 to enable, 0 to disable.
+AllowCMDAbilities=0
