--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,6 @@
 [Bot]
 ; The token for the Discord bot. DO NOT SHARE THIS TOKEN WITH ANYONE!
-Token=Njg5MTAwODYzMDI5MjQ4MDk4.GkOMij.5YGEDJZwa1ydEx9nON46cipHZFZmmDvUthkkWU
-; The prefix used for certain bot commands. Currently only used by developer commands.
-CommandPrefix=log!
-; Whether developer commands should be loaded. This requires all priviliged gateway intents to be enabled.
-UnlockDeveloperCommands=1
+Token=
 
 [Session]
 ; How many minutes each session is allowed to last at most
