Delete Enforce Name Validity and No Medic modifiers

--- a/config.ini
+++ b/config.ini
@@ -13,11 +13,7 @@ NumLogsRequiredForInsert=1000
 NumRCONWorkers=4
 ; The number of seconds between server updates. The smaller this number, the preciser your logs will be.
 SecondsBetweenIterations=5
-; Due to a game bug, a select few player names are incompatible with RCON and thus barely any stats can be collected about them.
-; Incompatible names either have a space or a certain special character as the 20th character in their name. This is the case for less than 0.1% of players.
-; With this value set to 1, HLU will kick these players asking them to change their name. Certain modifiers will kick players regardless of this value.
-KickIncompatibleNames=0
-; An API key for Steam, used to retrieve a player's full name from the Steam API. Without this, not all incompatible names can be detected.
+; An API key for Steam, currently unused. Can be left empty but might become required in the future.
 ; You can get a key here: https://steamcommunity.com/dev/apikey
 SteamApiKey=
 
